[package]
name = "binbloom"
version = "2.1.0"
edition = "2021"
rust-version = "1.75"
description = "A pure-Rust, memory-safe port of Quarkslab's binbloom: raw firmware analysis for endianness, base address and UDS database detection."
license = "Apache-2.0"
repository = "https://github.com/mikeortman/binbloom-rs"
readme = "README.md"
keywords = ["firmware", "reverse-engineering", "binary-analysis", "endianness", "uds"]
categories = ["command-line-utilities", "development-tools", "embedded"]

[[bin]]
name = "binbloom"
path = "src/main.rs"

[lib]
name = "binbloom"
path = "src/lib.rs"

[features]
default = []
# Opt-in parallel refinement backend. When enabled, candidate refinement uses
# rayon's work-stealing pool instead of the built-in std::thread chunking.
rayon = ["dep:rayon"]

[dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rayon = { version = "1", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
